# secure-ingest

./: CITATIONS.md  LICENSE  README.md  pyproject.toml
docs/: Analysis - architecture, feasability and greenfield.md  Analysis - secure-ingest vs PCAS.md  architecture.md  implementation.md  research-summary.md  technical-spec.md  threat-model.md  v02-design-notes.md
examples/: hidden_injection.json  malicious_injection.json  valid_finding.json
src/secure_ingest/: __init__.py  anomaly.py  budget.py  cli.py  llm.py  parser.py  pipeline.py  reliability.py  schema.py  schemas.py  semantic.py  serialization.py  structure.py  trust.py  validator.py
tests/: test_anomaly.py  test_budget.py  test_cli.py  test_llm.py  test_parser.py  test_pipeline.py  test_policy.py  test_reliability.py  test_schema.py  test_semantic.py  test_serialization.py  test_structure.py  test_taint.py  test_trust.py  test_validator.py
