[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "secure-ingest"
version = "0.2.0"
description = "Stateless sandboxed content parser for AI agent ingestion — prevents prompt injection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jesse Castro & Raven", email = "jesse@ravenagent.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/rai-tools/secure-ingest"
Repository = "https://github.com/rai-tools/secure-ingest"

[project.scripts]
secure-ingest = "secure_ingest.cli:entry_point"

[tool.setuptools.packages.find]
where = ["src"]
