[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-ingest"
version = "1.0.0"
description = "Payload hygiene and content validation layer for AI agent ingestion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jesse Castro & Raven", email = "jesse@ravenagent.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/rai-tools/secure-ingest"
Repository = "https://github.com/rai-tools/secure-ingest"

[project.scripts]
secure-ingest = "secure_ingest.cli:entry_point"

[tool.setuptools.packages.find]
where = ["src"]
